// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Querying Spokes on Aave V4 > Given a user who wants to fetch spokes by chain ID > Then it should return the spokes 1`] = `
[
  {
    "__typename": "Spoke",
    "address": "0x2559E4E04F2cA7180e5f20C2872d22EC89601b56",
    "chain": {
      "__typename": "Chain",
      "chainId": 123456789,
      "explorerUrl": "https://etherscan.io",
      "icon": "https://statics.aave.com/ethereum.svg",
      "isFork": true,
      "isTestnet": true,
      "name": "Devnet",
      "nativeGateway": "0x6f1aE3c0A22B393116Ded7332f465b0973fD1027",
      "nativeInfo": {
        "__typename": "TokenInfo",
        "categories": [
          "ETH_CORRELATED",
        ],
        "decimals": 18,
        "icon": "https://statics.aave.com/ethereum.svg",
        "id": "RXRoZXI6OkVUSA==",
        "name": "Ether",
        "symbol": "ETH",
      },
      "nativeWrappedToken": "0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2",
      "rpcUrl": "https://virtual.mainnet-aave.us-east.rpc.tenderly.co/dbaa58ab-597b-4bcd-ae6a-b8e50f716146",
      "signatureGateway": "0x9478027b9827A576dB0CE6d99A5E47B4F350a83d",
    },
    "id": "MTIzNDU2Nzg5OjoweDI1NTlFNEUwNEYyY0E3MTgwZTVmMjBDMjg3MmQyMkVDODk2MDFiNTY=",
    "name": "Yield Seeking",
  },
  {
    "__typename": "Spoke",
    "address": "0x4054a9EbfcdB692599a8dF61eb0b3484F2d279D4",
    "chain": {
      "__typename": "Chain",
      "chainId": 123456789,
      "explorerUrl": "https://etherscan.io",
      "icon": "https://statics.aave.com/ethereum.svg",
      "isFork": true,
      "isTestnet": true,
      "name": "Devnet",
      "nativeGateway": "0x6f1aE3c0A22B393116Ded7332f465b0973fD1027",
      "nativeInfo": {
        "__typename": "TokenInfo",
        "categories": [
          "ETH_CORRELATED",
        ],
        "decimals": 18,
        "icon": "https://statics.aave.com/ethereum.svg",
        "id": "RXRoZXI6OkVUSA==",
        "name": "Ether",
        "symbol": "ETH",
      },
      "nativeWrappedToken": "0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2",
      "rpcUrl": "https://virtual.mainnet-aave.us-east.rpc.tenderly.co/dbaa58ab-597b-4bcd-ae6a-b8e50f716146",
      "signatureGateway": "0x9478027b9827A576dB0CE6d99A5E47B4F350a83d",
    },
    "id": "MTIzNDU2Nzg5OjoweDQwNTRhOUViZmNkQjY5MjU5OWE4ZEY2MWViMGIzNDg0RjJkMjc5RDQ=",
    "name": "Frontier",
  },
  {
    "__typename": "Spoke",
    "address": "0x4f7202367f72ADae87393c3e49b3Fbc353a9110D",
    "chain": {
      "__typename": "Chain",
      "chainId": 123456789,
      "explorerUrl": "https://etherscan.io",
      "icon": "https://statics.aave.com/ethereum.svg",
      "isFork": true,
      "isTestnet": true,
      "name": "Devnet",
      "nativeGateway": "0x6f1aE3c0A22B393116Ded7332f465b0973fD1027",
      "nativeInfo": {
        "__typename": "TokenInfo",
        "categories": [
          "ETH_CORRELATED",
        ],
        "decimals": 18,
        "icon": "https://statics.aave.com/ethereum.svg",
        "id": "RXRoZXI6OkVUSA==",
        "name": "Ether",
        "symbol": "ETH",
      },
      "nativeWrappedToken": "0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2",
      "rpcUrl": "https://virtual.mainnet-aave.us-east.rpc.tenderly.co/dbaa58ab-597b-4bcd-ae6a-b8e50f716146",
      "signatureGateway": "0x9478027b9827A576dB0CE6d99A5E47B4F350a83d",
    },
    "id": "MTIzNDU2Nzg5OjoweDRmNzIwMjM2N2Y3MkFEYWU4NzM5M2MzZTQ5YjNGYmMzNTNhOTExMEQ=",
    "name": "LTS",
  },
  {
    "__typename": "Spoke",
    "address": "0x637F9E189332a2821e5B046E2d7EEFae2405d6c5",
    "chain": {
      "__typename": "Chain",
      "chainId": 123456789,
      "explorerUrl": "https://etherscan.io",
      "icon": "https://statics.aave.com/ethereum.svg",
      "isFork": true,
      "isTestnet": true,
      "name": "Devnet",
      "nativeGateway": "0x6f1aE3c0A22B393116Ded7332f465b0973fD1027",
      "nativeInfo": {
        "__typename": "TokenInfo",
        "categories": [
          "ETH_CORRELATED",
        ],
        "decimals": 18,
        "icon": "https://statics.aave.com/ethereum.svg",
        "id": "RXRoZXI6OkVUSA==",
        "name": "Ether",
        "symbol": "ETH",
      },
      "nativeWrappedToken": "0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2",
      "rpcUrl": "https://virtual.mainnet-aave.us-east.rpc.tenderly.co/dbaa58ab-597b-4bcd-ae6a-b8e50f716146",
      "signatureGateway": "0x9478027b9827A576dB0CE6d99A5E47B4F350a83d",
    },
    "id": "MTIzNDU2Nzg5OjoweDYzN0Y5RTE4OTMzMmEyODIxZTVCMDQ2RTJkN0VFRmFlMjQwNWQ2YzU=",
    "name": "Prime",
  },
  {
    "__typename": "Spoke",
    "address": "0xBa97c5E52cd5BC3D7950Ae70779F8FfE92d40CdC",
    "chain": {
      "__typename": "Chain",
      "chainId": 123456789,
      "explorerUrl": "https://etherscan.io",
      "icon": "https://statics.aave.com/ethereum.svg",
      "isFork": true,
      "isTestnet": true,
      "name": "Devnet",
      "nativeGateway": "0x6f1aE3c0A22B393116Ded7332f465b0973fD1027",
      "nativeInfo": {
        "__typename": "TokenInfo",
        "categories": [
          "ETH_CORRELATED",
        ],
        "decimals": 18,
        "icon": "https://statics.aave.com/ethereum.svg",
        "id": "RXRoZXI6OkVUSA==",
        "name": "Ether",
        "symbol": "ETH",
      },
      "nativeWrappedToken": "0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2",
      "rpcUrl": "https://virtual.mainnet-aave.us-east.rpc.tenderly.co/dbaa58ab-597b-4bcd-ae6a-b8e50f716146",
      "signatureGateway": "0x9478027b9827A576dB0CE6d99A5E47B4F350a83d",
    },
    "id": "MTIzNDU2Nzg5OjoweEJhOTdjNUU1MmNkNUJDM0Q3OTUwQWU3MDc3OUY4RmZFOTJkNDBDZEM=",
    "name": "Core",
  },
]
`;

exports[`Querying Spokes on Aave V4 > Given a user who wants to fetch spokes by hub > Then it should return the spokes for the specified hub 1`] = `
[
  {
    "__typename": "Spoke",
    "address": "0xBa97c5E52cd5BC3D7950Ae70779F8FfE92d40CdC",
    "chain": {
      "__typename": "Chain",
      "chainId": 123456789,
      "explorerUrl": "https://etherscan.io",
      "icon": "https://statics.aave.com/ethereum.svg",
      "isFork": true,
      "isTestnet": true,
      "name": "Devnet",
      "nativeGateway": "0x6f1aE3c0A22B393116Ded7332f465b0973fD1027",
      "nativeInfo": {
        "__typename": "TokenInfo",
        "categories": [
          "ETH_CORRELATED",
        ],
        "decimals": 18,
        "icon": "https://statics.aave.com/ethereum.svg",
        "id": "RXRoZXI6OkVUSA==",
        "name": "Ether",
        "symbol": "ETH",
      },
      "nativeWrappedToken": "0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2",
      "rpcUrl": "https://virtual.mainnet-aave.us-east.rpc.tenderly.co/dbaa58ab-597b-4bcd-ae6a-b8e50f716146",
      "signatureGateway": "0x9478027b9827A576dB0CE6d99A5E47B4F350a83d",
    },
    "id": "MTIzNDU2Nzg5OjoweEJhOTdjNUU1MmNkNUJDM0Q3OTUwQWU3MDc3OUY4RmZFOTJkNDBDZEM=",
    "name": "Core",
  },
  {
    "__typename": "Spoke",
    "address": "0x4054a9EbfcdB692599a8dF61eb0b3484F2d279D4",
    "chain": {
      "__typename": "Chain",
      "chainId": 123456789,
      "explorerUrl": "https://etherscan.io",
      "icon": "https://statics.aave.com/ethereum.svg",
      "isFork": true,
      "isTestnet": true,
      "name": "Devnet",
      "nativeGateway": "0x6f1aE3c0A22B393116Ded7332f465b0973fD1027",
      "nativeInfo": {
        "__typename": "TokenInfo",
        "categories": [
          "ETH_CORRELATED",
        ],
        "decimals": 18,
        "icon": "https://statics.aave.com/ethereum.svg",
        "id": "RXRoZXI6OkVUSA==",
        "name": "Ether",
        "symbol": "ETH",
      },
      "nativeWrappedToken": "0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2",
      "rpcUrl": "https://virtual.mainnet-aave.us-east.rpc.tenderly.co/dbaa58ab-597b-4bcd-ae6a-b8e50f716146",
      "signatureGateway": "0x9478027b9827A576dB0CE6d99A5E47B4F350a83d",
    },
    "id": "MTIzNDU2Nzg5OjoweDQwNTRhOUViZmNkQjY5MjU5OWE4ZEY2MWViMGIzNDg0RjJkMjc5RDQ=",
    "name": "Frontier",
  },
  {
    "__typename": "Spoke",
    "address": "0x4f7202367f72ADae87393c3e49b3Fbc353a9110D",
    "chain": {
      "__typename": "Chain",
      "chainId": 123456789,
      "explorerUrl": "https://etherscan.io",
      "icon": "https://statics.aave.com/ethereum.svg",
      "isFork": true,
      "isTestnet": true,
      "name": "Devnet",
      "nativeGateway": "0x6f1aE3c0A22B393116Ded7332f465b0973fD1027",
      "nativeInfo": {
        "__typename": "TokenInfo",
        "categories": [
          "ETH_CORRELATED",
        ],
        "decimals": 18,
        "icon": "https://statics.aave.com/ethereum.svg",
        "id": "RXRoZXI6OkVUSA==",
        "name": "Ether",
        "symbol": "ETH",
      },
      "nativeWrappedToken": "0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2",
      "rpcUrl": "https://virtual.mainnet-aave.us-east.rpc.tenderly.co/dbaa58ab-597b-4bcd-ae6a-b8e50f716146",
      "signatureGateway": "0x9478027b9827A576dB0CE6d99A5E47B4F350a83d",
    },
    "id": "MTIzNDU2Nzg5OjoweDRmNzIwMjM2N2Y3MkFEYWU4NzM5M2MzZTQ5YjNGYmMzNTNhOTExMEQ=",
    "name": "LTS",
  },
  {
    "__typename": "Spoke",
    "address": "0x2559E4E04F2cA7180e5f20C2872d22EC89601b56",
    "chain": {
      "__typename": "Chain",
      "chainId": 123456789,
      "explorerUrl": "https://etherscan.io",
      "icon": "https://statics.aave.com/ethereum.svg",
      "isFork": true,
      "isTestnet": true,
      "name": "Devnet",
      "nativeGateway": "0x6f1aE3c0A22B393116Ded7332f465b0973fD1027",
      "nativeInfo": {
        "__typename": "TokenInfo",
        "categories": [
          "ETH_CORRELATED",
        ],
        "decimals": 18,
        "icon": "https://statics.aave.com/ethereum.svg",
        "id": "RXRoZXI6OkVUSA==",
        "name": "Ether",
        "symbol": "ETH",
      },
      "nativeWrappedToken": "0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2",
      "rpcUrl": "https://virtual.mainnet-aave.us-east.rpc.tenderly.co/dbaa58ab-597b-4bcd-ae6a-b8e50f716146",
      "signatureGateway": "0x9478027b9827A576dB0CE6d99A5E47B4F350a83d",
    },
    "id": "MTIzNDU2Nzg5OjoweDI1NTlFNEUwNEYyY0E3MTgwZTVmMjBDMjg3MmQyMkVDODk2MDFiNTY=",
    "name": "Yield Seeking",
  },
]
`;
